# gstreamer_demo

./: CMakeLists.txt  README.md
cmake/: FindGStreamer.cmake
inc/: errors.h  essentials.h  webcam.h
src/: main.cpp  webcam.cpp
